# trezoa-templates

./: .gitignore  .prettierignore  COMMUNITY_TEMPLATE_GUIDE.md  CONTRIBUTING.md  README.md  TEMPLATES.md  package.json  pnpm-lock.yaml  templates.json
.github/workflows/: templates.json
backup_test/: README.md
community/gill-node-trezoax402/: README.md  SETUP.md  env.example  generate-test-client.mjs  package.json  test-402-response.mjs  test-replay-attack.mjs  test-true-x402.mjs
community/merkle-airdrop/: .gitignore  README.md  package.json  tsconfig.json  tsconfig.node.json
community/merkle-airdrop/anchor/programs/trezoa-distributor/: Cargo.toml
community/merkle-airdrop/anchor/programs/trezoa-distributor/src/: lib.rs
community/moneymq-x402/: README.md  package.json
community/supabase-auth/: .env.example  README.md  package.json
community/trezoa-chatgpt-kit/: .env.example  README.md  SWAP_SETUP.md  package-lock.json  package.json  pnpm-lock.yaml
community/x402-template/: README.md  package.json
community/x402-trezoa-rust/: .env.example  Cargo.toml.template  README.md  create.js  package.json
community/zk-compression-airdrop/: .gitignore  README.md  package.json
gill/gill-next-tailwind-basic/: .prettierignore  README.md  package.json
kit/nextjs-anchor/anchor/programs/vault/: Cargo.toml
kit/nextjs-anchor/anchor/programs/vault/src/: tests.rs
scripts/: create-image.ts  generate.ts  validate.ts
web3js/web3js-next-tailwind-counter/anchor/programs/counter/: Cargo.toml
web3js/web3js-next-tailwind-counter/anchor/programs/counter/src/: lib.rs
(+231 files in other folders)
