[package]
name = "vault"
version = "0.1.0"
description = "A simple TRZ vault program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "vault"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["trezoaanchor-lang/idl-build"]

[dependencies]
trezoaanchor-lang = "0.31.1"

[dev-dependencies]
litesvm = "0.6.1"
trezoa-sdk = "2.2"
