[package]
name = "counter"
version = "0.1.0"
description = "Created with TrezoaAnchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "counter"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["trezoaanchor-lang/idl-build"]


[dependencies]
trezoaanchor-lang = "0.31.1"

